Ignoring nested and empty loops. Warning user about nested loops

--- a/front/index.html
+++ b/front/index.html
@@ -23,6 +23,7 @@
             <div id="blocklyArea" class="h-full"  style="height: 100%; width: 100%;"></div>
             <div id="blocklyDiv" class="absolute px-3 sm:px-10"></div>
         </div>
+        <div id="warningDiv" class="text-amber-400 font-semibold text-center p-3 sm:p-4">&nbsp;</div>
         <div id="errorDiv" class="text-red-600 font-semibold text-center p-3 sm:p-4">&nbsp;</div>
         <div class="flex justify-center p-3 pt-0 sm:p-10 sm:pt-0 relative">
             <button id="btnExecute" class="bg-sky-500 hover:bg-sky-700 disabled:bg-sky-300 focus:ring focus:ring-sky-300 text-slate-100 rounded-md shadow-md p-3 flex gap-3 items-center">
