--- a/presentation-website/index.html
+++ b/presentation-website/index.html
@@ -57,9 +57,14 @@
 
         <section class="container mt-5">
             <h2>Apresentação do Projeto</h2>
-            <p>Assista à nossa apresentação em vídeo para ter uma visão detalhada do projeto. Neste vídeo, explicamos a estrutura do robô Arduino, seus recursos, a API HTTP desenvolvida para comunicação e a interface de programação em blocos visuais usando a biblioteca Blockly. É uma oportunidade para conhecer de perto o funcionamento e a inovação por trás do projeto.</p>
-            <div class="d-flex justify-content-center mt-4"><iframe width="560" height="315" src="https://www.youtube.com/embed/SEU_ID_DE_VIDEO" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+            <p>Neste vídeo de apresentação, nós explicamos a estrutura do carrinho e seu funcionamento, seus recursos, e elaboramos mais sobre a API HTTP desenvolvida para a comunicação com o carrinho. Também é explicado o uso da biblioteca Blocky, utilizada para a programação em blocos visuais, e como nós integramos estes recursos.</p>
+            <div class="d-flex justify-content-center mt-4">
+                <video width="560" height="315" controls>
+                    <source src="video/apresentacao.mp4" type="video/mp4">
+                </video>
+            </div>
         </section>
+
 
         <section id="documentacao" class="container mt-5">
             <h2>Documentação da API</h2>
